--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "8080:5432"
+    networks:
+      - parser_network
 
   metabase:
     image: metabase/metabase
@@ -26,3 +28,23 @@ services:
       MB_JVM_MAX_HEAP_SIZE: 512m
     ports:
       - "3000:3000"
+    networks:
+      - parser_network
+
+  items:
+    build: 
+      context: .
+      dockerfile: ./items_parser/Dockerfile
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+    depends_on:
+      - db
+    command: ["./wait-for-it.sh", "db:5432", "--", "python", "parser.py"]
+    networks:
+      - parser_network
+
+networks:
+  parser_network:
+    driver: bridge
