fixed: delete metabase and fixed bug in parser

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=superbotparser
 POSTGRES_DB=postgres
 MB_DB_TYPE=postgres
-MB_DB_DBNAME=postgres
-MB_DB_PORT=8080
+MB_DB_DBNAME=db
+MB_DB_PORT=5432
 MB_DB_USER=postgres
 MB_DB_PASS=superbotparser
