--- a/conf/market_csgo_parser.yaml
+++ b/conf/market_csgo_parser.yaml
@@ -4,49 +4,49 @@ logging_level: INFO
 weapons:
   - type: 'AWP'
     min_steam_item_price: 0
-    max_steam_item_price: 50
+    max_steam_item_price: 100
     profit_threshold: 30
 
   - type: 'M4A4'
     min_steam_item_price: 0
-    max_steam_item_price: 50
+    max_steam_item_price: 100
     profit_threshold: 30
 
   - type: 'M4A1-S'
     min_steam_item_price: 0
-    max_steam_item_price: 50
+    max_steam_item_price: 100
     profit_threshold: 30
 
   - type: 'AK-47'
     min_steam_item_price: 0
-    max_steam_item_price: 50
+    max_steam_item_price: 100
     profit_threshold: 30
 
   - type: 'Desert Eagle'
     min_steam_item_price: 0
-    max_steam_item_price: 50
+    max_steam_item_price: 100
     profit_threshold: 30
 
   - type: 'USP-S'
     min_steam_item_price: 0
-    max_steam_item_price: 50
+    max_steam_item_price: 100
     profit_threshold: 30
 
   - type: 'Glock-18'
     min_steam_item_price: 0
-    max_steam_item_price: 50
+    max_steam_item_price: 100
     profit_threshold: 30
 
   - type: 'P250'
     min_steam_item_price: 0
-    max_steam_item_price: 50
+    max_steam_item_price: 100
     profit_threshold: 30
 
 hydra:
   job_logging:
     formatters:
       simple:
-        format: '[%(asctime)s] [%(levelname)-7s] %(threadName)-22s :: %(message)-100s # [%(module)s(%(funcName)s):%(lineno)d]'
+        format: '[%(asctime)s] [%(levelname)-7s] %(message)-100s # [%(module)s(%(funcName)s):%(lineno)d]'
     handlers:
       file:
         encoding: 'utf-8'
