--- a/deploy.yml
+++ b/deploy.yml
@@ -20,6 +20,6 @@
         src: docker-compose.yml.j2
         dest: ./docker-compose.yml
     - name: Run docker-compose
-      command: docker-compose up -d --build --force-recreate
+      command: docker-compose up -d --build
       args:
         chdir: .
