updated auth page, added cloud db

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=superbotparser
+POSTGRES_USER=postgres.asqfxhicfzrrzrywfugw
+POSTGRES_PASSWORD=vwg0654sh2r02n5J
 POSTGRES_DB=postgres
+POSTGRES_PORT=6543
+POSTGRES_HOST=aws-0-eu-central-1.pooler.supabase.com
