--- a/scrappers/requirements.txt
+++ b/scrappers/requirements.txt
@@ -1,5 +1,4 @@
 hydra-core
-selenium==4.10.0
 undetected-chromedriver
 selenium_stealth
 2captcha-python
@@ -8,3 +7,5 @@ python-dotenv
 pg8000
 selenium-wire==5.1.0
 Brotli==1.1.0 
+selenium==4.9.1
+requests
