--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,7 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "build": "remix build",
+    "build": "remix build --sourcemap && sentry-upload-sourcemaps --org k-p-inc --project cs-parser-dashboard --release 0.0.1",
     "dev": "remix dev --manual",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve ./build/index.js",
@@ -25,6 +25,7 @@
     "@remix-run/node": "^2.4.1",
     "@remix-run/react": "^2.4.1",
     "@remix-run/serve": "^2.4.1",
+    "@sentry/remix": "^8.7.0",
     "@supabase/auth-helpers-remix": "^0.2.6",
     "axios": "^1.6.5",
     "class-variance-authority": "^0.7.0",
@@ -36,6 +37,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
+    "recharts": "^2.12.7",
     "remix-hook-form": "^4.0.0",
     "remix-validated-form": "^5.1.5",
     "tailwind-merge": "^2.2.0",
