--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,8 +35,7 @@ jobs:
 
       - name: Build the docker-compose services
         run: |
-          for service in ${{ matrix.build_services }}
-          do
+          for service in $(echo ${{ toJson(matrix.build_services) }} | tr -d '[],'); do
             ./build_by_image.sh "$service"
           done
 
