fix: deployment for everything

--- a/hosts.yml
+++ b/hosts.yml
@@ -25,3 +25,14 @@ all:
           ansible_become_pass: y.uvgsbcPwYY9F
           apps:
             - infrastructure
+        dashboard:
+          ansible_host: 87.249.44.187
+          ansible_become_pass: iTx6gh_s-R+7X-
+          apps:
+            - dashboard
+        worker1:
+          ansible_host: 89.223.64.8
+          ansible_become_pass: f3DvnNM*AF16xn
+          weapon_type: AK-47
+          apps:
+            - worker
