--- a/setup-hosts.yml
+++ b/setup-hosts.yml
@@ -78,13 +78,6 @@
         mode: '0700'
         owner: deploy
 
-    # Don't allow the deploy user to set their authorized keys! Otherwise, it can escape from
-    # its one-command jail.
-    - name: Configure SSHD to read authorized keys from /etc/ssh/authorized_keys/<user>
-      copy:
-        src: ./authorized_keys_file.conf
-        dest: /etc/ssh/sshd_config.d/authorized_keys_file.conf
-
     # For each service, generate an SSH key pair used for cloning git repos
     # and deploying over SSH
     - name: Create deploy key for each app
@@ -108,6 +101,16 @@
         mode: '0770'
         owner: deploy
       loop: "{{ apps }}"
+      when: weapon_type is undefined
+
+    - name: Copy worker-specific deploy scripts
+      template:
+        src: ./deploy-worker.sh.j2
+        dest: /home/deploy/deploy-{{ item }}.sh
+        mode: '0770'
+        owner: deploy
+      loop: "{{ apps }}"
+      when: weapon_type is defined
 
     # Configure deploy's SSH to use the deploy keys generated earlier when cloning/pulling git repos.
     # When cloning/pulling/etc the <app> repo, we'll use <app>.github.com, so that way, we can
