--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,3 +51,22 @@ jobs:
           docker tag ${{ matrix.service }} ${{ secrets.DOCKER_USERNAME }}/${{ matrix.service }}:${{ github.sha }}
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p "${{ secrets.DOCKER_PASSWORD }}"
           docker push ${{ secrets.DOCKER_USERNAME }}/${{ matrix.service }}:${{ github.sha }}
+
+  deploy:
+    if: github.ref == 'refs/heads/master'
+    name: Run remote deploy script
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Run full deploy
+        uses: dawidd6/action-ansible-playbook@v2
+        with:
+            playbook: deploy.yml
+            directory: ./
+            key: ${{ secrets.SSH_PRIVATE_KEY }}
+            vault_password: ${{ env.ANSIBLE_VAULT_PASSWORD }}
+            options: |
+              -i ./hosts.yml
+              -u root
