--- a/hosts.yml
+++ b/hosts.yml
@@ -36,3 +36,15 @@ all:
           weapon_type: AK-47
           apps:
             - worker
+        worker2:
+          ansible_host: 81.200.151.145
+          ansible_become_pass: d,ZZJo45vA6jLm
+          weapon_type: AWP
+          apps:
+            - worker
+        worker3:
+          ansible_host: 92.255.78.143
+          ansible_become_pass: s9BV5erZJz^j+k
+          weapon_type: M4A4
+          apps:
+            - worker
