--- a/hosts.yml
+++ b/hosts.yml
@@ -30,21 +30,18 @@ all:
           ansible_become_pass: iTx6gh_s-R+7X-
           apps:
             - dashboard
-        worker1:
+        global_worker:
           ansible_host: 89.223.64.8
           ansible_become_pass: f3DvnNM*AF16xn
-          weapon_type: AK-47
+          weapon_types:
+            - AK-47
+            - AWP
+            - M4A4
+            - M4A1-S
+          ips_pool:
+            - 92.255.78.143
+            - 176.57.218.206
+            - 81.200.151.145
+            - 89.223.64.8
           apps:
-            - worker
-        worker2:
-          ansible_host: 81.200.151.145
-          ansible_become_pass: d,ZZJo45vA6jLm
-          weapon_type: AWP
-          apps:
-            - worker
-        worker3:
-          ansible_host: 92.255.78.143
-          ansible_become_pass: s9BV5erZJz^j+k
-          weapon_type: M4A4
-          apps:
-            - worker
+            - global_worker
