--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,9 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        build_type: ["worker", "dashboard", "infrastructure"]
+        build_type: ["global_worker", "dashboard", "infrastructure"]
         include:
-        - build_type: worker
+        - build_type: global_worker
           service: global_worker
         - build_type: dashboard
           service: dashboard
