--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,7 +74,6 @@ jobs:
   tests:
     name: Run tests
     runs-on: ubuntu-latest
-    needs: build
     steps:
       - uses: actions/checkout@v3
 
@@ -86,7 +85,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r .\tests\requirements.txt -r .\scrappers\requirements.txt
 
       - name: Run tests
         run: pytest .\tests\
