--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,7 +85,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r .\tests\requirements.txt -r .\scrappers\requirements.txt
+          pip install -r .\tests\requirements.txt
+          pip install -r .\scrappers\requirements.txt
 
       - name: Run tests
         run: pytest .\tests\
