--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,28 @@ env:
   ANSIBLE_VAULT_PASSWORD: ${{ secrets.ANSIBLE_VAULT_PASSWORD }}
 
 jobs:
+  tests:
+    name: Run tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10.10"
+          cache: 'pip'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install --upgrade setuptools -r ./tests/requirements.txt -r ./scrappers/requirements.txt
+
+      - name: Run tests
+        run: pytest
+
   build:
+    needs: tests
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -70,24 +91,3 @@ jobs:
             options: |
               -i ./hosts.yml
               -u root
-
-  tests:
-    name: Run tests
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v3
-        with:
-          python-version: '3.12'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install --upgrade setuptools
-          pip install -r ./tests/requirements.txt
-          pip install -r ./scrappers/requirements.txt
-
-      - name: Run tests
-        run: pytest ./tests/
