upd(tests): add full market test

--- a/tests/test_data.yml
+++ b/tests/test_data.yml
@@ -1,48 +1,60 @@
 data: &weapon_data
   - type: AK-47
     name: Head Shot
+    is_stattrak: False
+    max_price: 200
+    page_number: 0
+    quality: Field-Tested
 
   - type: AWP
     name: Neo-Noir
+    is_stattrak: False
+    max_price: 200
+    page_number: 0
+    quality: Field-Tested
 
   - type: M4A4
     name: Temukau
+    is_stattrak: False
+    max_price: 200
+    page_number: 0
+    quality: Field-Tested
 
   - type: M4A1-S
     name: Decimator
+    is_stattrak: False
+    max_price: 200
+    page_number: 0
+    quality: Field-Tested
 
 data: &default_data
   - type: AK-47
     name: Head Shot
     is_stattrak: False
-    max_price: ''
+    max_price: 200
     page_number: 0
+    quality: Field-Tested
 
 data: &stattrack_data_true
   - type: AK-47
     name: Head Shot
     is_stattrak: True
-    max_price: ''
+    max_price: 200
     page_number: 0
+    quality: Field-Tested
 
 data: &stattrack_data_false
   - type: AK-47
     name: Head Shot
     is_stattrak: False
-    max_price: ''
+    max_price: 200
     page_number: 0
+    quality: Field-Tested
 
-test_is_request_type_equal_types: *weapon_data
+
 test_is_market_name_has_right_type_and_name: *weapon_data
-
+test_is_stattrak_and_souvenir_false: *weapon_data
 test_is_stattrak_true: *stattrack_data_true
-test_is_stattrak_false: *stattrack_data_false
-
 test_is_price_is_float: *default_data
-test_is_request_not_empty: *default_data
-test_is_price_is_not_empty: *default_data
-test_is_currency_equal_usd: *default_data
-
-test_is_souvenir_false_by_default: *default_data
-
-test_is_market_name_has_right_type: *default_data
+test_is_url_valid: *default_data
+test_is_stickers_array_not_empty: *default_data
