--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
           pip install --upgrade setuptools -r ./tests/requirements.txt -r ./scrappers/requirements.txt
 
       - name: Run tests
-        run: pytest
+        run: pytest tests\test_marketsHelpers.py
 
   build:
     needs: tests
