--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,9 @@ on: push
 env:
   ANSIBLE_VAULT_PASSWORD_FILE: ~/.vault_pass.txt
   ANSIBLE_VAULT_PASSWORD: ${{ secrets.ANSIBLE_VAULT_PASSWORD }}
+  REDIS_PWD: ${{ secrets.REDIS_PWD }}
+  REDIS_PORT: ${{ secrets.REDIS_PORT }}
+  REDIS_HOST: ${{ secrets.REDIS_HOST }}
 
 jobs:
   tests:
