style: merge conflicts fixed

--- a/prepare-build-config.yml
+++ b/prepare-build-config.yml
@@ -13,6 +13,9 @@
       - bitskins
       - skinbid
       - csfloat
+      - white-market
+      - skinport
+      - skinbaron
 
   tasks:
     - name: Create Docker Compose file
