debug: deploy white.market

--- a/prepare-build-config.yml
+++ b/prepare-build-config.yml
@@ -6,7 +6,15 @@
 
   vars:
     market_types:
-      - white-market
+      - dmarket
+      - cs-money
+      - haloskins
+      - market-csgo
+      - bitskins
+      - skinbid
+      - csfloat
+      - skinport
+      - skinbaron
 
   tasks:
     - name: Create Docker Compose file
