--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+       - name: Set default branch name in Git
+        run: git config --global init.defaultBranch main
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
