--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,10 @@ jobs:
           python-version: "3.10.10"
           cache: 'pip'
 
+      - name: Update pip
+        run: |
+          python -m pip install --upgrade pip==24.1.1
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
