--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Update pip
         run: |
-          python -m pip install --upgrade pip==24.1.1
+          python -m pip install --upgrade pip
 
       - name: Install dependencies
         run: |
