--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,11 @@ jobs:
 
       - name: Update pip
         run: |
-          python -m pip install --upgrade pip
+          pip install --upgrade pip
+
+      - name: Update setuptools
+        run: |
+          pip install --upgrade setuptools
 
       - name: Install dependencies
         run: |
