--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,9 +15,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set default branch name in Git
-        run: git config --global init.defaultBranch main
-
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
@@ -28,9 +25,13 @@ jobs:
         run: |
           pip install --upgrade pip
 
+      - name: Update pip
+        run: |
+          pip install --upgrade setuptools
+
       - name: Install dependencies
         run: |
-          pip install --upgrade setuptools -r ./tests/requirements.txt -r ./scrappers/requirements.txt
+          pip install -r ./tests/requirements.txt -r ./scrappers/requirements.txt
 
       - name: Run tests
         run: pytest tests/test_marketsHelpers.py
