--- a/scrappers/items_prices_parser/Dockerfile
+++ b/scrappers/items_prices_parser/Dockerfile
@@ -19,4 +19,5 @@ COPY scripts/wait-for-it.sh /app/wait-for-it.sh
 RUN chmod +x /app/wait-for-it.sh
 RUN pip install -r requirements.txt
 
-CMD ["./wait-for-it.sh", "-t", "20", "seleniarm-hub:4444", "--", "sh", "-c", "while :; do python -m items_prices_parser.csgoskins; sleep 3600; done"]
+ENV DOCKER_RUN "a"
+CMD ["sh", "-c", "while :; do python -m items_prices_parser.csgoskins; sleep 86400; done"]
