--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
           pip install -r ./tests/requirements.txt -r ./scrappers/requirements.txt
 
       - name: Run tests
-        run: pytest tests/test_marketsHelpers.py
+        run: PYTHONPATH=scrappers pytest tests/test_marketsHelpers.py
 
   build:
     needs: tests
