--- a/app/package.json
+++ b/app/package.json
@@ -33,6 +33,7 @@
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.0",
+    "embla-carousel-react": "^8.1.6",
     "isbot": "^3.6.8",
     "lucide-react": "^0.303.0",
     "pg": "^8.11.3",
@@ -42,6 +43,7 @@
     "recharts": "^2.12.7",
     "remix-hook-form": "^4.0.0",
     "remix-validated-form": "^5.1.5",
+    "swiper": "^11.1.5",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
