fix: ci/cd fails because no docker-compose was  found

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,8 @@ jobs:
   tests:
     name: Run tests
     runs-on: ubuntu-latest
+    container:
+      image: lucasalt/act_base:latest
     steps:
       - uses: actions/checkout@v3
 
@@ -39,6 +41,8 @@ jobs:
   build:
     needs: tests
     runs-on: ubuntu-latest
+    container:
+      image: lucasalt/act_base:latest
     strategy:
       matrix:
         build_type: ["global_worker", "worker", "dashboard", "infrastructure"]
@@ -89,6 +93,8 @@ jobs:
     if: github.ref == 'refs/heads/main'
     name: Run remote deploy script
     runs-on: ubuntu-latest
+    container:
+      image: lucasalt/act_base:latest
     needs: build
     steps:
       - uses: actions/checkout@v3
