upd(ws): after review upd

--- a/prepare-build-config.yml
+++ b/prepare-build-config.yml
@@ -17,6 +17,9 @@
       - gamerpay
       - waxpeer
 
+    ws_market_types:
+      - skinport
+
     market_types_one_network_only:
       - white-market
 
