--- a/scrappers/global_parser_websocket/Dockerfile
+++ b/scrappers/global_parser_websocket/Dockerfile
@@ -11,6 +11,9 @@ COPY scripts/wait-for-it.sh /app/wait-for-it.sh
 COPY requirements.txt /app/
 COPY data/stickers_content.json /app/data/
 
+RUN apt-get update \
+    && apt-get -y install libpq-dev gcc
+
 # Install dependencies
 RUN chmod +x /app/wait-for-it.sh
 RUN pip install -r requirements.txt
