--- a/scrappers/requirements.txt
+++ b/scrappers/requirements.txt
@@ -7,10 +7,11 @@ python-dotenv
 psycopg2
 selenium-wire==5.1.0
 blinker==1.7.0
-Brotli==1.1.0 
+Brotli==1.1.0
 selenium==4.9.1
 requests
 redis
 fake_useragent
 lxml
 prometheus_client
+websocket
