--- a/scrappers/requirements.txt
+++ b/scrappers/requirements.txt
@@ -14,4 +14,7 @@ redis
 fake_useragent
 lxml
 prometheus_client
-websocket
+simple-websocket==1.0.0
+trio-websocket==0.11.1
+websocket-client==1.7.0
+websockets==12.0
