--- a/prepare-build-config.yml
+++ b/prepare-build-config.yml
@@ -8,6 +8,7 @@
     market_types:
       - dmarket
       - cs-money
+      - csfloat
       - haloskins
       - market-csgo
       - bitskins
@@ -15,7 +16,6 @@
       - white-market
       - skinbaron
       - gamerpay
-      - waxpeer
 
     ws_market_types:
       - skinport
