--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,13 @@ jobs:
   tests:
     name: Run tests
     runs-on: ubuntu-latest
+
+    services:
+      chrome-node:
+        image: selenium/standalone-chrome:latest
+        container_name: chrome-node
+        hostname: chrome-node
+
     steps:
       - uses: actions/checkout@v3
 
@@ -35,6 +42,8 @@ jobs:
 
       - name: Run tests
         run: PYTHONPATH=scrappers pytest tests/test_marketsHelpers.py
+        env:
+          CUSTOM_ALONE_NODE: chrome-node
 
   build:
     needs: tests
