--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
     services:
       chrome-node:
         image: selenium/standalone-chrome:latest
-        hostname: chrome-node
+        options: --hostname chrome-node container --name chrome-node
 
     steps:
       - uses: actions/checkout@v3
@@ -26,7 +26,7 @@ jobs:
         with:
           python-version: "3.10.10"
           cache: 'pip'
-
+g
       - name: Update pip
         run: |
           pip install --upgrade pip
