--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
 
     services:
-      chrome-node:
+      selenium:
         image: selenium/standalone-chrome
         options: --hostname chrome-node container --name chrome-node
 
