--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,9 @@ jobs:
     name: Run tests
     runs-on: ubuntu-latest
 
+    container:
+      image: node:20
+
     services:
       selenium:
         image: selenium/standalone-chrome
