--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,7 @@ env:
   REDIS_PWD: ${{ secrets.REDIS_PWD }}
   REDIS_PORT: ${{ secrets.REDIS_PORT }}
   REDIS_HOST: ${{ secrets.REDIS_HOST }}
+  PROXY_URL: ${{ secrets.PROXY_URL }}
 
 jobs:
   tests:
