--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,8 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "build": "remix build --sourcemap && sentry-upload-sourcemaps --org k-p-inc --project cs-parser-dashboard --release 0.0.1",
+    "build": "remix build",
+    "build:sourcemap": "remix build --sourcemap && sentry-upload-sourcemaps --org k-p-inc --project cs-parser-dashboard --release 0.0.1",
     "dev": "remix dev --manual",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve ./build/index.js",
