--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -2,6 +2,10 @@ FROM node:20-alpine
 WORKDIR /app/
 COPY app/. .
 RUN npm install
+
+# Update caniuse-lite database
+RUN npx update-browserslist-db@latest
+
 # Set NODE_ENV to production for the build
 ENV NODE_ENV=production
 # Explicitly disable sourcemaps for production build
